Scale carrying/wraparound fixed

--- a/src/Tools.scss
+++ b/src/Tools.scss
@@ -7,6 +7,9 @@
   label+select {
     margin-left: 4px;
   }
+  label+input {
+    margin-left: 1em;
+  }
   div, button, select {
     border-radius: 8px;
   }
